--- a/src/pages/header/Header.module.css
+++ b/src/pages/header/Header.module.css
@@ -1,34 +1,20 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-size: x-large;
-  color: aliceblue;
-}
-
 .header {
   display: flex;
   width: 100%;
-  height: 80px;
   z-index: 1;
   justify-content: space-between;
-  align-items: center;
   padding: 10px;
   position: fixed;
-  background-color: rgba(152, 152, 153, 0.39);
+  background-color: blue;
 }
 
 .buttons {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: end;
   gap: 30px;
   margin-right: 60px;
 }
-
 .cartp {
   display: flex;
   align-items: center;
@@ -54,10 +40,4 @@ body {
 }
 .navlink {
   text-decoration: none;
-}
-.navlink p {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
-  font-size: x-large;
-  color: whitesmoke;
 }
